--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,37 +4,49 @@ project(Poker)
 # Generate compile_commands.json
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# Dependencies
-set(RAYLIB_VERSION 4.5.0)
-find_package(raylib ${RAYLIB_VERSION} QUIET) # QUIET or REQUIRED
-if (NOT raylib_FOUND) # If there's none, fetch and build raylib
-  include(FetchContent)
-  FetchContent_Declare(
-    raylib
-    DOWNLOAD_EXTRACT_TIMESTAMP OFF
-    URL https://github.com/raysan5/raylib/archive/refs/tags/${RAYLIB_VERSION}.tar.gz
-  )
-  FetchContent_GetProperties(raylib)
-  if (NOT raylib_POPULATED) # Have we downloaded raylib yet?
-    set(FETCHCONTENT_QUIET NO)
-    FetchContent_Populate(raylib)
-    set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE) # don't build the supplied examples
-    add_subdirectory(${raylib_SOURCE_DIR} ${raylib_BINARY_DIR})
+file(GLOB_RECURSE SOURCES "src/*.c")
+if(NOT DEFINED SERVER)
+  # Dependencies
+  set(RAYLIB_VERSION 4.5.0)
+  find_package(raylib ${RAYLIB_VERSION} QUIET) # QUIET or REQUIRED
+  if (NOT raylib_FOUND) # If there's none, fetch and build raylib
+    include(FetchContent)
+    FetchContent_Declare(
+      raylib
+      DOWNLOAD_EXTRACT_TIMESTAMP OFF
+      URL https://github.com/raysan5/raylib/archive/refs/tags/${RAYLIB_VERSION}.tar.gz
+    )
+    FetchContent_GetProperties(raylib)
+    if (NOT raylib_POPULATED) # Have we downloaded raylib yet?
+      set(FETCHCONTENT_QUIET NO)
+      FetchContent_Populate(raylib)
+      set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE) # don't build the supplied examples
+      add_subdirectory(${raylib_SOURCE_DIR} ${raylib_BINARY_DIR})
+    endif()
   endif()
 endif()
-
 # Our Project
 
-add_executable(${PROJECT_NAME} core_basic_window.c)
+add_executable(${PROJECT_NAME} ${SOURCES})
 #set(raylib_VERBOSE 1)
-target_link_libraries(${PROJECT_NAME} raylib)
+
+if(DEFINED SERVER)
+  add_compile_definitions(SERVER_BUILD)
+  set(PLATFORM "Desktop")
+else()
+  target_link_libraries(${PROJECT_NAME} raylib)
+endif()
 
 # Web Configurations
 if (${PLATFORM} STREQUAL "Web")
+    target_compile_definitions(${PROJECT_NAME} PRIVATE PLATFORM_WEB=1)
     # Tell Emscripten to build an example.html file.
     set_target_properties(${PROJECT_NAME} PROPERTIES SUFFIX ".html")
 endif()
 
+if(WIN32)
+  target_link_libraries(${PROJECT_NAME} WS2_32)
+endif()
 # Checks if OSX and links appropriate frameworks (Only required on MacOS)
 if (APPLE)
     target_link_libraries(${PROJECT_NAME} "-framework IOKit")
