--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,29 @@ project(Poker)
 # Generate compile_commands.json
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-file(GLOB_RECURSE COMMON_SOURCES "src/common/*.c")
-file(GLOB_RECURSE CLIENT_SOURCES "src/client/*.c")
-file(GLOB_RECURSE SERVER_SOURCES "src/server/*.c")
+
+# https://stackoverflow.com/questions/11813271/embed-resources-eg-shader-code-images-into-executable-library-with-cmake
+# Creates C resources file from files in given directory
+function(create_resources dir output)
+    # Create empty output file
+    file(WRITE ${output} "#pragma once\n")
+    # Collect input files
+    file(GLOB bins ${dir}/*)
+    # Iterate through input files
+    foreach(bin ${bins})
+        # Get short filename
+        string(REGEX MATCH "([^/]+)$" filename ${bin})
+        # Replace filename spaces & extension separator for C compatibility
+        string(REGEX REPLACE "\\.| |-" "_" filename ${filename})
+        # Read hex data from file
+        file(READ ${bin} filedata HEX)
+        # Convert hex data for C compatibility
+        string(REGEX REPLACE "([0-9a-f][0-9a-f])" "0x\\1," filedata ${filedata})
+        # Append data to output file
+        file(APPEND ${output} "const unsigned char ${filename}[] = {${filedata}0x00,};\nconst unsigned ${filename}_size = sizeof(${filename});\n")
+    endforeach()
+endfunction()
+
 if(NOT DEFINED SERVER)
   # Dependencies
   set(RAYLIB_VERSION 4.5.0)
@@ -26,8 +46,13 @@ if(NOT DEFINED SERVER)
       add_subdirectory(${raylib_SOURCE_DIR} ${raylib_BINARY_DIR})
     endif()
   endif()
+  create_resources("resources/" "src/client/resources.h")
 endif()
 # Our Project
+
+file(GLOB_RECURSE COMMON_SOURCES "src/common/*.c")
+file(GLOB_RECURSE CLIENT_SOURCES "src/client/*.c")
+file(GLOB_RECURSE SERVER_SOURCES "src/server/*.c")
 
 #set(raylib_VERBOSE 1)
 
